# ziggle-ai

./: .dockerignore  .gitignore  Dockerfile  config.py  data.py  data_processing.py  embedding.py  main.py  mongodb.py  mute_detection.py  mute_validation.py  prompt.txt  pyproject.toml  readme.md  rnn.py
.github/workflows/: build_and_deploy.yaml  production.yaml
ai_local/: Dockerfile  deadline_detection.py
archive/: data.py  data_processing.py  gcluod_data.py  mongodb.py
archive/mute_detection/: mute_detection.py
archive/mute_validation/: mute_validation.py
config/: config.py
src/: deadline_detection.py  main.py
src/embedding/: embedding.py
